# eth-gw

./: Cargo.toml  README.md
functions/hello-world/: Cargo.toml  README.md  set_function.sh
functions/hello-world/.cargo/: config
functions/hello-world/src/: .lib.rs.swp  lib.rs
src/: main.rs
